fix: swagger docs, docker-compose.yml
